--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,17 +1,2 @@
-@conference{signaltrain,
-  title = {Profiling Audio Compressors with Deep Neural Networks},
-  author = {Hawley, Scott H. and Colburn, Benjamin and Mimilakis, Stylianos Ioannis},
-  booktitle = {Audio Engineering Society Convention 147},
-  month = {Oct},
-  year = {2019},
-  url = {http://www.aes.org/e-lib/browse.cfm?elib=20595}
-}               
+@misc{endersgame_2020, title={Interview on Magic with Collector \& Magician Steve Brooks (The Magic Cafe)}, url={https://playingcarddecks.com/blogs/all-in/interview-on-magic-with-collector-magician-steve-brooks-the-magic-cafe}, journal={PlayingCardDecks.com}, author={EndersGame}, year={2020}, month={Dec}}
 
-@article{billy_signaltrain2, 
-  title={Exploring Quality and Generalizability in Parameterized Neural Audio Effects},
-  author={William Mitchell and Scott H. Hawley},
-  journal={ArXiv},  
-  year={2020},
-  volume={abs/2006.05584},
-  url = {https://arxiv.org/abs/2006.05584}
-} 
